--- a/config/locale/translations.csv
+++ b/config/locale/translations.csv
@@ -51,9 +51,13 @@ dashboard_welcome_msg,Willkommen im Medienarchiv der Künste!,Welcome to Madek!,
 external_groups,Abteilungsgruppen,Division groups,
 group_delete_confirm_msg,"Sind Sie sicher, dass Sie diese Arbeitsgruppe löschen wollen?",Are you sure you want to delete this work group?,
 group_edit_btn,Bearbeiten,Edit,
-group_edit_form_new_member_login,Login des neuen Mitglieds dieser Gruppe,New group member login,
+group_edit_form_new_member_login_hint,Login des neuen Mitglieds dieser Gruppe,New group member login,
+group_edit_form_new_member_login_label,User hinzufügen,Add a member,
+group_edit_form_save_btn,Speichern,Save,
+group_edit_form_title_pre,Arbeitsgruppe bearbeiten: ,Edit Group: ,
 group_meta_data_institutional_group_name,Name der Abteilungsgruppe,Division group name,
 group_meta_data_name,Name,Name,
+group_new_form_title,Neue Arbeitsgruppe erstellen,Create Group,
 group_new_group_btn,Neue Arbeitsgruppe,New Work Group,
 group_toolbar_header_entrusted_resources,Mir anvertraute Medieneinträge,Entrusted Media Entries,
 internal_groups,Arbeitsgruppen,Work groups,
